# libpico2d

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.old  README.md
cmake/: GpioConfig.cmake
docs/: MRD_IPS_1.54_LCD.xcf  microboy-v1.1_pinout.xcf  retropico-v1.1_pinout.xcf
example/: CMakeLists.txt  main.cpp
example/bitmaps/: girl_240x240_alpha.h  monster.h
src/: audio.h  battery.h  display.cpp  display.h  input.cpp  input.h  io.cpp  io.h  io_file.cpp  io_file.h  platform.cpp  platform.h  resource.h  romfs.cpp  romfs.h  surface.h
src/cmake/: add_res.cmake
src/compat/: Adafruit_I2CDevice.h  Adafruit_SPIDevice.h  Arduino.h
src/example/: CMakeLists.txt  main.cpp
src/example/bitmaps/: explosion-sprite.h  girl_120x120.h  girl_240x240.h  monster.h  star.h
src/fatfs/: ffconf.h
src/romfs/: romfs.cpp  romfs.h
src/skeleton/: CMakeLists.txt  display.cpp  display.h  platform.cpp  platform.h  resource.h  surface.h
src/skeleton/cmake/: add_res.cmake
src/skeleton/ui/: ui.cpp  ui.h
src/skeleton/widgets/: bitmap.cpp  bitmap.h  rectangle.cpp  text.cpp
src/ui/: CMakeLists.txt
src/utility/: clock.cpp  clock.h  clock_time.cpp  clock_time.h  psram.cpp  psram.h  sleep.cpp  sleep.h  utility.cpp  utility.h
src/widgets/: bitmap.cpp  bitmap.h  rectangle.cpp  rectangle.h  text.cpp  text.h  widget.cpp  widget.h
tools/: rp2040.cfg  rp2350.cfg
